--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -65,6 +65,13 @@
         - "settings.json"
         - "keybindings.json"
 
+    - name: "Set npmrc file"
+      file:
+        state: link
+        force: true
+        src: "~/.config/npm/npmrc"
+        dest: "~/.npmrc"
+
     - name: Enable Dark Mode
       osx_defaults:
         domain: NSGlobalDomain
