--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -5,6 +5,8 @@ tap "heroku/brew"
 tap "michaeleisel/zld"
 # Command-line interface for SQLite
 brew "sqlite"
+# Display directories as trees (with optional color/HTML output)
+brew "tree"
 # Automate deployment, configuration, and upgrading
 brew "ansible"
 # Official Amazon AWS command-line interface
@@ -37,6 +39,8 @@ brew "flyctl"
 brew "fzf"
 # GitHub command-line tool
 brew "gh"
+# Distributed revision control system
+brew "git"
 # Git extension for versioning large files
 brew "git-lfs"
 # Passphrase entry dialog utilizing the Assuan protocol
@@ -47,6 +51,8 @@ brew "gnupg"
 brew "gnuplot"
 # Tool for glamorous shell scripts
 brew "gum"
+# World's fastest and most advanced password recovery utility
+brew "hashcat"
 # C/C++ and Java libraries for Unicode and globalization
 brew "icu4c@76"
 # Dex to Java decompiler
@@ -67,7 +73,7 @@ brew "mas"
 brew "maven"
 # Utility for managing network connections
 brew "netcat"
-# Platform built on V8 to build network applications
+# Open-source, cross-platform JavaScript runtime environment
 brew "node"
 # Manage multiple Node.js versions
 brew "nvm"
@@ -80,13 +86,17 @@ brew "pkgconf"
 # Cross-platform library for audio I/O
 brew "portaudio"
 # Object-relational database system
-brew "postgresql@15"
+brew "postgresql@16"
+# Object-relational database system
+brew "postgresql@17"
 # Python version management
 brew "pyenv"
 # Pyenv plugin to manage virtualenv
 brew "pyenv-virtualenv"
 # Generic machine emulator and virtualizer
 brew "qemu"
+# Search tool like grep and The Silver Searcher
+brew "ripgrep"
 # Safe, concurrent, practical language
 brew "rust"
 # Build tool for Scala projects
@@ -97,8 +107,6 @@ brew "scc"
 brew "sevenzip"
 # Static analysis and lint tool, for (ba)sh scripts
 brew "shellcheck"
-# Display directories as trees (with optional color/HTML output)
-brew "tree"
 # Port of OpenAI's Whisper model in C/C++
 brew "whisper-cpp"
 # Network analyzer and capture tool - without graphical user interface
@@ -107,6 +115,8 @@ brew "wireshark", link: false
 brew "xorriso"
 # JavaScript package manager
 brew "yarn"
+# Feature-rich command-line audio/video downloader
+brew "yt-dlp"
 # The Clojure Programming Language
 brew "clojure/tools/clojure"
 # Packer
@@ -115,10 +125,16 @@ brew "hashicorp/tap/packer"
 brew "heroku/brew/heroku"
 # Password manager that keeps all passwords secure behind one password
 cask "1password"
+# Command-line interface for 1Password
+cask "1password-cli"
 # Draw and interact with physical systems
 cask "algodoo"
+# Tools for building Android applications
+cask "android-studio"
 # Multi-track audio editor and recorder
 cask "audacity"
+# Integrated CAD, CAM, CAE, and PCB software
+cask "autodesk-fusion"
 # 3D model slicing software for 3D printers, maintained by Bambu Lab
 cask "bambu-studio"
 # Virtual Audio Driver
@@ -131,6 +147,8 @@ cask "burp-suite"
 cask "chatgpt"
 # Semantic code analysis engine
 cask "codeql"
+# Node-based image, video and audio generator
+cask "comfyui"
 # Write, edit, and chat about your code with AI
 cask "cursor"
 # Voice and text chat software
@@ -175,6 +193,8 @@ cask "slack"
 cask "synthesia"
 # Management tool for Unity
 cask "unity-hub"
+# Development environment
+cask "vagrant"
 # Open-source virtual modular synthesiser
 cask "vcv-rack"
 # Virtualiser for arm64 hardware
@@ -199,9 +219,12 @@ cask "zap"
 cask "zoom"
 mas "1Password for Safari", id: 1569813296
 mas "AdGuard for Safari", id: 1440147259
+mas "Amphetamine", id: 937984704
 mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
 mas "Numbers", id: 409203825
+mas "OneDrive", id: 823766827
 mas "Pages", id: 409201541
+mas "Tailscale", id: 1475387142
 mas "Xcode", id: 497799835
